AG-13351 Fix opacity for chevron dark mode

--- a/external/ag-website-shared/src/components/landing-pages/LandingPageSection.module.scss
+++ b/external/ag-website-shared/src/components/landing-pages/LandingPageSection.module.scss
@@ -298,5 +298,8 @@
 .framework {
     svg {
         opacity: 0.5;
+        #{$selector-darkmode} & {
+            opacity: 1;
+        }
     }
 }
